JBQA-7390 Set higher permgen for RedDeer tests